--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,1 +1,15 @@
-<p>acerca-de works!</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <img src="../../../assets/perfilPhoto.jpg" class="img-fluid" id="fotoDePerfil">
+    </div>
+    <div class="col-xs-12 col-xs-2 col-md-2 col-lg-2">
+        <p id="nombre">Diez Yesica V.</p>
+        <p>Full Stack Developer Jr</p>
+    </div>
+    <div class="col-xs-12 col-xs-8 col col-md-8 col-lg-8">
+        <span>
+            <h1>     Acerca de mí</h1>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita iste possimus natus alias, neque beatae, mollitia, nemo quaerat perspiciatis maiores eaque magni accusantium quia facere atque officia! Aut, dolorum rem?</p>
+        </span>
+    </div>
+</div>
